[metadata]
name = pywinreg
version = 0.1.0
description = Idiomatic Python API for Windows registry operations
long_description = file: README.md
license = MIT License
author = SuperPudding98

[options]
package_dir=
    =src
packages = find:
python_requiers = >=3.7,<4
# install_requires = ...

[options.packages.find]
where=src
